<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalles"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_tarea"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_tarea"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewDeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_limite"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewMaterials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/materiales_necesarios"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/familiar"
        android:textSize="18sp" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/rangeSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="100"
        android:stepSize="1" />

    <!-- Agrega un LinearLayout adicional para los botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atras"
            android:layout_marginTop="16dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/saveProgressButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar_progreso"
            android:layout_marginTop="16dp"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
