<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/taskImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/familia" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_tasks"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/taskNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <Spinner
        android:id="@+id/taskSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/familyMemberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/familiar"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <Spinner
        android:id="@+id/familyMemberSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atras"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/assignButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign"
            android:layout_weight="1"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</LinearLayout>
